reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithCircularReference>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithCircularReference",
      "fields": {
        "named": [
          {
            "name": "_f",
            "type": {
              "name": "std::boxed::Box",
              "arguments": [
                {
                  "name": "reflectapi_demo::tests::generics::TestStructWithCircularReference"
                }
              ]
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "std::boxed::Box",
      "description": "std::boxed::Box pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    }
  ]
}
