reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic_parent.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithCircularReferenceGenericParent<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::boxed::Box",
            "parameters": [
              {
                "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric",
                "parameters": [
                  {
                    "name": "T"
                  }
                ]
              }
            ]
          },
          "required": true
        },
        {
          "name": "_f2",
          "type": {
            "name": "T"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericParent",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::boxed::Box",
            "parameters": [
              {
                "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric",
                "parameters": [
                  {
                    "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericParent",
                    "parameters": [
                      {
                        "name": "T"
                      }
                    ]
                  }
                ]
              }
            ]
          },
          "required": true
        },
        {
          "name": "_f2",
          "type": {
            "name": "std::marker::PhantomData",
            "parameters": [
              {
                "name": "T"
              }
            ]
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::boxed::Box",
      "description": "std::boxed::Box pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    },
    {
      "kind": "primitive",
      "name": "std::marker::PhantomData",
      "description": "Zero-sized phantom data",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
