reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic_without_box_parent-2.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super :: into_input_typescript_code :: <\nTestStructWithCircularReferenceGenericWithoutBoxParent::<\nTestStructWithCircularReferenceGenericWithoutBoxParent<u8, u16>,\nTestStructWithCircularReferenceGenericWithoutBoxParent<String, u32>, > > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    input_test: (
      input: reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
        reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
          number /* u8 */,
          number /* u16 */
        >,
        reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
          string,
          number /* u32 */
        >
      >,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace generics {
      export interface TestStructWithCircularReferenceGenericWithoutBox<A, B> {
        _f1: A;
        _f2: B;
      }

      export interface TestStructWithCircularReferenceGenericWithoutBoxParent<
        C,
        D,
      > {
        _f: reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBox<
          D,
          C
        >;
      }
    }
  }
}

namespace __implementation {

  function input_test(client: Client) {
    return (
      input: reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
        reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
          number /* u8 */,
          number /* u16 */
        >,
        reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
          string,
          number /* u32 */
        >
      >,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
          reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
            number /* u8 */,
            number /* u16 */
          >,
          reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBoxParent<
            string,
            number /* u32 */
          >
        >,
        {},
        {},
        {}
      >(client, "/input_test", input, headers, options);
  }
}
