reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic_without_box_parent.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithCircularReferenceGenericWithoutBoxParent<TestStructWithCircularReferenceGenericWithoutBoxParent<u8,\n            u16>,\n            TestStructWithCircularReferenceGenericWithoutBoxParent<String,\n            u32>>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "reflectapi::Empty"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "TestStructWithCircularReferenceGenericWithoutBox"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBox",
      "parameters": [
        {
          "name": "A"
        },
        {
          "name": "B"
        }
      ],
      "fields": {
        "named": [
          {
            "id": {
              "kind": "Field",
              "path": [
                "_f1"
              ],
              "disambiguator": 0
            },
            "name": "_f1",
            "type": {
              "name": "A"
            },
            "required": true
          },
          {
            "id": {
              "kind": "Field",
              "path": [
                "_f2"
              ],
              "disambiguator": 0
            },
            "name": "_f2",
            "type": {
              "name": "B"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "TestStructWithCircularReferenceGenericWithoutBoxParent"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBoxParent",
      "parameters": [
        {
          "name": "C"
        },
        {
          "name": "D"
        }
      ],
      "fields": {
        "named": [
          {
            "id": {
              "kind": "Field",
              "path": [
                "_f"
              ],
              "disambiguator": 0
            },
            "name": "_f",
            "type": {
              "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBox",
              "arguments": [
                {
                  "name": "D"
                },
                {
                  "name": "C"
                }
              ]
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "std::string::String"
        ],
        "disambiguator": 0
      },
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "u16"
        ],
        "disambiguator": 0
      },
      "name": "u16",
      "description": "16-bit unsigned integer"
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "u32"
        ],
        "disambiguator": 0
      },
      "name": "u32",
      "description": "32-bit unsigned integer"
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "u8"
        ],
        "disambiguator": 0
      },
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
