reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic_without_box_parent_specific-3.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super :: into_input_rust_code :: <\nTestStructWithCircularReferenceGenericWithoutBoxParentSpecific > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn input_test(
            &self,
            input: super::types::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBoxParentSpecific,
            headers: reflectapi::Empty,
        ) -> Result<reflectapi::Empty, reflectapi::rt::Error<reflectapi::Empty, C::Error>> {
            reflectapi::rt::__request_impl(&self.client, "/input_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod generics {

                #[derive(Debug, serde::Serialize)]
                pub struct TestStructWithCircularReferenceGenericWithoutBox<A, B> {
                    pub _f1: A,
                    pub _f2: B,
                }

                #[derive(Debug, serde::Serialize)]
                pub struct TestStructWithCircularReferenceGenericWithoutBoxParentSpecific {
    pub _f: super::super::super::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBox<super::super::super::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBox<u8, u16>, super::super::super::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericWithoutBox<std::string::String, u32>>,
}
            }
        }
    }
}
