reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_simple_generic.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithSimpleGeneric<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithSimpleGeneric",
      "parameters": [
        {
          "name": "A"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "A"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
