reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_vec_generic_generic.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithVecGenericGeneric<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithSimpleGeneric",
      "parameters": [
        {
          "name": "A"
        }
      ],
      "fields": {
        "named": [
          {
            "name": "_f",
            "type": {
              "name": "A"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithVecGenericGeneric",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": {
        "named": [
          {
            "name": "_f",
            "type": {
              "name": "std::vec::Vec",
              "arguments": [
                {
                  "name": "reflectapi_demo::tests::generics::TestStructWithSimpleGeneric",
                  "arguments": [
                    {
                      "name": "T"
                    }
                  ]
                }
              ]
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
